@@ -1,3 +1,5 @@
+- Refactor: Use TuitionPaymentPlanOrder to find a tuition payment plan by degree curricular plan
+
 7.1.0 (07-06-2021)
 - New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
 - Improvement: Use default payment platform to Automatic rules and Academic services
